# NeuralPDE

./: .env  .gitignore  Description.ipynb  README.md  export_output.py  loss_function_intuition.py  pyproject.toml  requirements.txt  setup.py
doc/: hamiltonian_solver.tex
neural_pde/: data_generator.py  evaluate.py  plot.py  train.py
output/: anim.pvd  anim0.pvd  anim1.pvd  anim2.pvd  anim3.pvd  anim4.pvd  anim5.pvd  anim6.pvd  anim7.pvd  anim8.pvd  anim9.pvd  animate.pvd  animate0.pvd  animate1.pvd  animate2.pvd  animate3.pvd  animate4.pvd  animate5.pvd  animate6.pvd  animate7.pvd  animate8.pvd  animate9.pvd  predicted_validation.pvd  target_validation.pvd  vtk_animation.pvd  vtk_animation0.pvd  vtk_animation1.pvd  vtk_animation2.pvd  vtk_animation3.pvd  vtk_animation4.pvd  vtk_animation5.pvd  vtk_animation6.pvd  vtk_animation7.pvd  vtk_animation8.pvd  vtk_animation9.pvd
saved_model/: model.json  model.pt
scripts/: config.toml  config_template.toml  data_generator.py  data_generator_swes.py  evaluate.py  full_pipeline.sh  full_training_pipeline.sh  generate_data.sh  generate_data_swes.sh  move_results_to_windows.py  plot_data.py  plot_interpolation_error.py  train.py
src/: autograd.py  config.toml  config_template.toml  data_generator.py  data_generator_swes.py  data_producer.py  diagnostics.py  draw_plots.py  driver_autograd.py  evaluate.py  example.py  foo.txt  generate_data.sh  generate_data_swes.sh  hamiltonian_solver.py  inspect_hdf5.py  intergrid.py  interpolate_with_adjoint.py  katies_decoder.py  loss_functions.py  make_pde_animation.py  model.py  mwe.py  (+26 more)
(+340 files in other folders)
