[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralPDE"
version = "1.0"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "h5py",
  "tqdm",
  "tensorboard",
]
requires-python = ">=3.12"
authors = [
  {name = "Eike Mueller", email = "e.mueller@bath.ac.uk"},
  {name= "Katie Mackenzie", email = "km2560@bath.ac.uk"}
]
maintainers = [
  {name = "Eike Mueller", email = "e.mueller@bath.ac.uk"},
]
description = "Neural PDE solver on the sphere."
readme = "README.md"
license = "MIT"
keywords = ["machine learning","neural ODEs"]
classifiers = [
    "Programming Language :: Python :: 3"
]
[project.urls]
Repository = "https://github.com/eikehmueller/NeuralPDE"
[tool.setuptools]
packages = [
  "neural_pde",
    "neural_pde.model",
    "neural_pde.data",
    "neural_pde.grid",
    "neural_pde.model",
    "neural_pde.solver",
    "neural_pde.util"]